--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;1,400&family=Staatliches&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;1,400&family=Staatliches&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/estilos.css" />
+
+    <title>Ejercicio 11 - Paterno - Minger</title>
   </head>
   <body>
-    <h1>Hola</h1>
-    <h2>soy un h2</h2>
-    <h3>agregué un h3</h3>
+    <header class="header">
+      <div class="header__div1"></div>
+      <div class="header__div2">
+        <h1 class="header_h1">Vení al Gym!</h1>
+      </div>
+      <div class="header__div3"></div>
+    </header>
+    <script src="js/main.js"></script>
   </body>
 </html>
