--- a/index.html
+++ b/index.html
@@ -4,19 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;1,400&family=Staatliches&display=swap"
-      rel="stylesheet"
-    />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;1,400&family=Staatliches&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="css/estilos.css" />
 
     <title>Ejercicio 11 - Paterno - Minger</title>
@@ -29,6 +17,28 @@
       </div>
       <div class="header__div3"></div>
     </header>
+
+    <div class="contenedor">
+      <form action="" class="form">
+        <label for="" class="formulario1__label">Nombre:*</label>
+        <input class="input" type="text" form-input />
+
+        <label for="" class="formulario1__label">Apellido:*</label>
+        <input type="text" form-input />
+
+        <label for="" class="formulario1__label">Documento:*</label>
+        <input type="text" form-input />
+
+        <label for="" class="formulario1__label">Nacionalidad:*</label>
+        <input type="text" form-input />
+
+        <label for="" class="formulario1__label"
+          >Contanos un poco de vos...</label
+        >
+        <textarea name="" id=""></textarea>
+      </form>
+    </div>
+
     <script src="js/main.js"></script>
   </body>
 </html>
